src/components/zen-text/zen-text.scss
@import '../scss/component-helpers.scss';

:host {
  display: flex;
  align-items: center;
  line-height: 1.2em;
  color: $color-gray-700;
}

:host([inline]) {
  display: inline-flex;
}

//--------------------------------------------
:host([size='xs']) {
  font-size: $text-xs;
}

:host([size='sm']) {
  font-size: $text-sm;
}

:host([size='md']) {
  font-size: $text-md;
}

:host([size='lg']) {
  font-size: $text-lg;
}

:host([size='xl']) {
  font-size: $text-xl;
}

:host([size='2xl']) {
  font-size: $text-3xl;
}

//--------------------------------------------

:host([variant='heading'][size='xs']) {
  font-weight: bold;
  font-size: $heading-xs;
}

:host([variant='heading'][size='sm']) {
  font-weight: bold;
  font-size: $heading-sm;
}

:host([variant='heading'][size='md']) {
  font-weight: bold;
  font-size: $heading-md;
}

:host([variant='heading'][size='lg']) {
  font-weight: bold;
  font-size: $heading-lg;
}

:host([variant='heading'][size='xl']) {
  font-weight: bold;
  font-size: $heading-xl;
}

//--------------------------------------------

:host([variant='label']),
:host([variant='label'][size]) {
  font-size: $text-md; // label has only 1 possible size!
  font-weight: 700;
  margin-bottom: 0.5rem;
}

:host([variant='support']),
:host([variant='support'][size]) {
  font-size: $text-sm; // support has only 1 possible size!
  color: $color-gray-600;
  margin-top: 0.5rem;
}

:host([bold]) {
  font-weight: bold;
}

:host([italic]) {
  font-style: italic;
}

:host([uppercase]) {
  text-transform: uppercase;
}

:host([lowercase]) {
  text-transform: lowercase;
}

:host([strikethrough]) {
  text-decoration: line-through;
}

:host([underline]) {
  text-decoration: underline;
}

:host([align='right']) {
  justify-content: flex-end;
}

:host([align='center']) {
  justify-content: center;
}

:host([truncate]) {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

:host([pale]) {
  color: $color-gray-500;
}

:host([disabled]) {
  color: $color-gray-200;
  pointer-events: none;
}

:host([state='error']),
:host([state='error'][size]) {
  color: $color-red-700;
}

:host([state='success']),
:host([state='success'][size]) {
  color: $color-green-700;
}

span.required {
  color: $color-red-700;
}

